Actualizar index.html
Tratando de corregir enlace a hoja de estilos que no está siendo tomada.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="CSS/reset.css"> <!-- Reset del navegador -->
         <link rel="shortcut icon" href="img/binary-code-algorithm-svgrepo-com.svg" type="image/x-icon"/>
-        <link rel="stylesheet" type="style" href="CSS/index_styles.css"> <!-- Estilo de la página --> 
+        <link rel="stylesheet" type="text/css" href="CSS/index_styles.css"> <!-- Estilo de la página --> 
         <title>Encriptador Alura | Desafío 1</title>
     </head>
 
