--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
         <link rel="shortcut icon" href="img/binary-code-algorithm-svgrepo-com.svg" type="image/x-icon"/>
         <link rel="stylesheet" type="text/css" href="CSS/index_styles.css"> <!-- Estilo de la página --> 
         <title>Encriptador Alura | Desafío 1</title>
+
+        <styles>
+            main{
+                background: #191919;
+                background-image: url(img/code.png);
+                background-repeat: repeat, repeat-x, repeat-y;
+                width: 200%;
+                padding-top: 2em;
+                padding-bottom: 2em;
+            }
+
+            #txtResultado{
+                background: #706f6f;
+                background-image: url(img/Munieco.svg);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-position: bottom;
+            }
+        </styles>
     </head>
 
     <body>
