--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="CSS/index_styles.css"> <!-- Estilo de la página --> 
         <title>Encriptador Alura | Desafío 1</title>
 
-        <styles>
+        <style>
             main{
                 background: #191919;
                 background-image: url(img/code.png);
@@ -27,7 +27,7 @@
                 background-position: center;
                 background-position: bottom;
             }
-        </styles>
+        </style>
     </head>
 
     <body>
